--- a/incubator/elasticsearch/templates/client-svc.yaml
+++ b/incubator/elasticsearch/templates/client-svc.yaml
@@ -9,6 +9,7 @@ metadata:
     release: {{ .Release.Name }}
   name: {{ template "elasticsearch.client.fullname" . }}
 spec:
+  sessionAffinity: ClientIP
   ports:
     - name: http
       port: 9200
